--- a/styles.css
+++ b/styles.css
@@ -876,3 +876,12 @@ body.dark-mode {
       background-attachment: fixed;
     }
   }
+  /* Remove background image on mobile devices */
+@media (max-width: 767px) and (max-height: 900px) {
+    body, body.dark-mode {
+        background-image: none;
+    }
+    body::before, body.dark-mode::before {
+        background-color: var(--body-bg);
+    }
+}
